--- a/projects.html
+++ b/projects.html
@@ -89,19 +89,19 @@
     </div>
     <div class="projects">
         <div class="project">
-            <a href="#"><i class="fas fa-file-pdf"></i> DocAna AI</a>
+            <a href="https://bhavesh189.github.io/DocAna/" target="_blank"><i class="fas fa-file-pdf"></i> DocAna AI</a>
         </div>
         <div class="project">
-            <a href="#"><i class="fas fa-play"></i> EnterNet : NetFlix Clone</a>
+            <a href="https://bhavesh189.github.io/EnterNet/home.html" target="_blank"><i class="fas fa-play"></i> EnterNet : NetFlix Clone</a>
         </div>
         <div class="project">
-            <a href="#"><i class="fas fa-sticky-note"></i> Notes Web + App</a>
+            <a href="https://bhavesh189.github.io/CollageNotes/" target="_blank"><i class="fas fa-sticky-note"></i> Notes Web + App</a>
         </div>
         <div class="project">
-            <a href="#"><i class="fas fa-robot"></i> Infinity Jarvis</a>
+            <a href="https://bhavesh189.github.io/Bhavesh_Project_infinity/" target="_blank"><i class="fas fa-robot"></i> Infinity Jarvis</a>
         </div>
         <div class="project">
-            <a href="#"><i class="fas fa-star"></i> More Coming</a>
+            <a href="index.html" target="_blank"><i class="fas fa-star"></i> More Coming</a>
         </div>
     </div>
 </body>
