--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,7 @@
     </div>
     <div class="projects">
         <div class="project">
-            <a href="https://bhavesh189.github.io/DocAna/" target="_blank"><i class="fas fa-file-pdf"></i> DocAna AI</a>
+            <a href="https://bhavesh189.github.io/DocAna" target="_blank"><i class="fas fa-file-pdf"></i> DocAna AI</a>
         </div>
         <div class="project">
             <a href="https://bhavesh189.github.io/EnterNet/home.html" target="_blank"><i class="fas fa-play"></i> EnterNet : NetFlix Clone</a>
