--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,7 @@
             flex-direction: row;
             justify-content: center;
             align-items: center;
+            cursor: pointer;
         }
         .project:hover {
             box-shadow : 0 0 10px blue;
@@ -97,8 +98,8 @@
         <div class="project">
             <a href="https://bhavesh189.github.io/CollageNotes/" target="_blank"><i class="fas fa-sticky-note"></i> Notes Web + App</a>
         </div>
-        <div class="project">
-            <a href="https://bhavesh189.github.io/Bhavesh_Project_infinity/" target="_blank"><i class="fas fa-robot"></i> Infinity Jarvis</a>
+        <div class="project">   
+            <a href="https://bhavesh189.github.io/Bhavesh_Project_infinity" target="_blank"><i class="fas fa-robot"></i> Infinity Jarvis</a>
         </div>
         <div class="project">
             <a href="index.html" target="_blank"><i class="fas fa-star"></i> More Coming</a>
