--- a/projects.html
+++ b/projects.html
@@ -96,7 +96,7 @@
             <a href="https://bhavesh189.github.io/EnterNet/home.html" target="_blank"><i class="fas fa-play"></i> EnterNet : NetFlix Clone</a>
         </div>
         <div class="project">
-            <a href="https://bhavesh189.github.io/CollageNotes/" target="_blank"><i class="fas fa-sticky-note"></i> Notes Web + App</a>
+            <a href="https://bhavesh189.github.io/CollageNotes" target="_blank"><i class="fas fa-sticky-note"></i> Notes Web + App</a>
         </div>
         <div class="project">   
             <a href="https://bhavesh189.github.io/Bhavesh_Project_infinity" target="_blank"><i class="fas fa-robot"></i> Infinity Jarvis</a>
