--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
                 <a href="index.html">Home</a>
                 <a href="skills.html">Skills</a>
                 <a href="projects.html">Projects</a>
-                <a href="#" class="contact">Contact</a>
+                <a href="contact.html" class="contact">Contact</a>
             </div>
         </div>
         <div class="container">
             <div class="photoAndName">
-                <img src="myimg2.jpg">
+                <img src="Bhavesh_image.png">
                 <h3>Bhavesh Sharma</h3>
             </div>
             <h3><span class="first"></span></h3>
