--- a/projects.html
+++ b/projects.html
@@ -104,26 +104,28 @@
 
     <div class="projects">
         <a href="https://bhavesh189.github.io/DocAna" target="_blank">
-            <div class="project">
-                <i class="fas fa-file-pdf"></i> DocAna AI
+            <div class="project"> DocAna AI
             </div>
         </a>
 
         <a href="https://bhavesh189.github.io/EnterNet/home.html" target="_blank">
-            <div class="project">
-                <i class="fas fa-play"></i> EnterNet : Netflix Clone
+            <div class="project">EnterNet : Netflix Clone
             </div>
         </a>
 
         <a href="https://bhavesh189.github.io/CollageNotes" target="_blank">
-            <div class="project">
-                <i class="fas fa-sticky-note"></i> Notes Web + App
+            <div class="project"> Notes Web + App
             </div>
         </a>
 
         <a href="https://bhavesh189.github.io/Bhavesh_Project_infinity" target="_blank">
             <div class="project">
-                <i class="fas fa-robot"></i> Infinity Jarvis
+                 Infinity Jarvis
+            </div>
+        </a>
+        <a href="https://bhavesh189.github.io/TaskWave/" target="_blank">
+            <div class="project">
+                TaskWave (UnderMaintainance)
             </div>
         </a>
 
