--- a/projects.html
+++ b/projects.html
@@ -73,6 +73,7 @@
             transform: scale(1.05);
             border-color: yellow;
             background: rgb(220, 20, 20);
+            filter : brightness(1.5)
         }
 
         @media screen and (max-width: 500px) {
